--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <!--
-  Using a local (embedded) copy:
-  Syntax for using a local copy of the ArcGIS API for JavaScript
+  Using the CDN:
+  Include the CDN ArcGIS API for JavaScript stylesheet
   -->
-  <link rel="stylesheet" href="./js/esrijs-custom-build/esri/css/esri.css"/>
+  <link rel="stylesheet" href="https://js.arcgis.com/3.16/esri/css/esri.css"/>
   <title>PhoneGap Map</title>
   <style>
   /* Hide the default PhoneGap div */
@@ -39,17 +39,10 @@
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <!--
-  Using a local (embedded) copy:
-  Syntax for using a local copy of the ArcGIS API for JavaScript
-  This tells the Dojo loader that we are going to load it locally
-  instead of using a URL reference.
+  Using the CDN:
+  Include the CDN ArcGIS API for JavaScript library
   -->
-  <script>
-    var dojoConfig = {
-      baseUrl: "./js/esrijs-custom-build/dojo/dojo"
-    };
-  </script>
-  <script src="./js/esrijs-custom-build/init.js"></script>
+  <script src="https://js.arcgis.com/3.16/"></script>
   <script type="text/javascript">
       app.initialize();
   </script>
